implement the chicago_weather notebook

--- a/chicago_crime.ipynb
+++ b/chicago_crime.ipynb
@@ -836,7 +836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pandas Data Structures\n",
+    "## Pandas data structures\n",
     "\n",
     "Let's explain them on the data we have…\n",
     "\n",
@@ -2210,7 +2210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Boolean Indexing\n",
+    "### Boolean indexing\n",
     "\n",
     "Filter based on boolean expressions. Any expression that returns boolean values…"
    ]
