--- a/chicago_crime_and_weather.ipynb
+++ b/chicago_crime_and_weather.ipynb
@@ -306,8 +306,11 @@
     "chunksize = 100000\n",
     "df_chunks = []\n",
     "\n",
-    "for df in pd.read_csv(crimes_raw_file_path, parse_dates=[2], index_col=[2], chunksize=chunksize, iterator=True):\n",
-    "    df = df.loc['2016-01-01':'2017-01-01']\n",
+    "for df in pd.read_csv(\n",
+    "    crimes_raw_file_path, parse_dates=[2], index_col=[2],\n",
+    "    chunksize=chunksize, iterator=True, low_memory=True\n",
+    "):\n",
+    "    df = df['2016-01-01':'2016-12-31']\n",
     "    df_chunks.append(df)\n",
     "    \n",
     "crimes2016 = pd.concat(df_chunks)\n",
@@ -578,7 +581,7 @@
    ],
    "source": [
     "# parsing weather data and also kick out some unnecessary 2017 values\n",
-    "crimes2016 = pd.read_csv(crimes_file_path, index_col=0, parse_dates=True, compression='gzip')['2016']\n",
+    "crimes2016 = pd.read_csv(crimes_file_path, index_col=0, parse_dates=True, compression='gzip')\n",
     "crimes2016.head()"
    ]
   },
